Generics/Code10_error_report.txt
javac errors for Code10.java 
Code10.java:3: error: non-static type variable T cannot be referenced from a static context
    private static T value;
                   ^
Code10.java:8: error: unexpected type
         t = new T();
                 ^
  required: class
  found:    type parameter T
  where T is a type-variable:
    T extends Object declared in class Code10
Code10.java:20: error: illegal generic type for instanceof
      return t instanceof T;
                          ^
3 errors
 
============================================================================= 
ExtendJ errors for Code10.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code10.java:3,20: error: no visible type named T
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code10.java:8: error: cannot instantiate T no matching constructor found in T
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code10.java:8: error: *** Can only instantiate classes, which T is not
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code10.java:20: error: the right-hand side of this instanceof expression does not denote a reifiable type
 
============================================================================= 
Eclipse ECJ errors for Code10.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code10.java (at line 3)
	private static T value;
	               ^
Cannot make a static reference to the non-static type T
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code10.java (at line 8)
	t = new T();
	        ^
Cannot instantiate the type T
----------
3. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code10.java (at line 20)
	return t instanceof T;
	       ^^^^^^^^^^^^^^
Cannot perform instanceof check against type parameter T. Use its erasure Object instead since further generic type information will be erased at runtime
----------
3 problems (3 errors)
